--- a/login-fe/index.html
+++ b/login-fe/index.html
@@ -21,7 +21,7 @@
                       <a href ="http://localhost:1022/oauth2/authorization/naver">
                         <img src="img/naver.png" onclick="loginNaver()" alt="">
                       </a>
-                      <a href="https://kauth.kakao.com/oauth/authorize?client_id=9b3bd2ea9a7c1016854421a7947c24d2&redirect_uri=http://localhost:1022/login/oauth2/code/kakao&response_type=code">
+                      <a href="http://localhost:1022/oauth2/authorization/kakao">
                       <img src="img/kakao.png"  alt="">
                     </a>
                   </div>
